--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Ad Astra / My Blog"
+title                    : "Ad Astra"
 title_separator          : "-"
 name                     : &name "Ad Astra"
 description              : &description "I am a undergraduate student in Shanghai Jiao Tong University, majoring in Physics. I am a member of Zhiyuan Honor Project."
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Wangq1h"
-  avatar           : "profile.png"
+  avatar           : "profile.jpg"
   bio              : "Welcome to the frontier of my mind."
   location         : "Shanghai, China"
   employer         :
