--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -7,9 +7,9 @@
 # -------------------------------------
 
 cotes:
-  name: Cotes Chung
-  twitter: cotes2020
-  url: https://github.com/cotes2020/
+  name: Wangq1h
+  # twitter: cotes2020
+  url: https://github.com/wangq1h/
 
 sille_bille:
   name: Dinesh Prasanth Moluguwan Krishnamoorthy
