--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,16 +2,25 @@
 
 - type: github
   icon: "fab fa-github"
+  
 
-- type: twitter
-  icon: "fab fa-twitter"
+# - type: twitter
+#   icon: "fab fa-twitter"
 
 - type: email
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
 
-- type: rss
-  icon: "fas fa-rss"
+# - type: rss
+#   icon: "fas fa-rss"
+#   noblank: true
+
+- type: zhihu
+  icon: "fab fa-zhihu"
+  url: "https://www.zhihu.com/people/wang-qi-heng-26"
+
+- type: wechat
+  icon: "fab fa-wechat"
   noblank: true
 # Uncomment and complete the url below to enable more contact options
 #
