--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ social:
   name: wangq1h
   email: wangq1h@sjtu.edu.cn # change to your email address
   wechat: departbeforedark
-  zhihu: Kevin H
+  zhihu: wang-qi-heng-26
   links:
     # The first element serves as the copyright owner's link
     # https://twitter.com/username # change to your twitter homepage
