--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,7 +6,7 @@
 #   url: {homepage_of_author}
 # -------------------------------------
 
-cotes:
+wangq1h:
   name: Wangq1h
   # twitter: cotes2020
   url: https://github.com/wangq1h/
