--- a/_config.yml
+++ b/_config.yml
@@ -75,7 +75,7 @@ theme_mode:  auto #[light|dark]
 # will be added to all image (site avatar & posts' images) paths starting with '/'
 #
 # e.g. 'https://cdn.com'
-# img_cdn: ""
+img_cdn: "https://wangq1h.github.io"
 
 # the avatar on sidebar, support local or CORS resources
 avatar: "/assets/avatar.png"
