--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,6 +1,9 @@
-- url: /assets/images/gallery/image1.jpg
+- url: /assets/images/gallery/wy1.jpg
   alt: 图片1
-  caption: 图片1的描述
-- url: /assets/images/gallery/image2.jpg
+  caption: 
+- url: /assets/images/gallery/wy2.jpg
   alt: 图片2
-  caption: 图片2的描述
+  caption: 
+- url: /assets/images/gallery/wy3.jpg
+  alt: 图片2
+  caption:
