--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,9 +1,9 @@
-# - url: /assets/img/gallery/wy1.jpg
-#   alt: 图片1
-#   caption: 
-# - url: /assets/img/gallery/wy2.jpg
-#   alt: 图片2
-#   caption: 
-# - url: /assets/img/gallery/wy3.jpg
-#   alt: 图片2
-#   caption:
+- url: /assets/img/gallery/wy1.jpg
+  alt: 图片1
+  caption: 
+- url: /assets/img/gallery/wy2.jpg
+  alt: 图片2
+  caption: 
+- url: /assets/img/gallery/wy3.jpg
+  alt: 图片2
+  caption:
