--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ comments:
   active: waline # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
   waline:
-    serverURL: 'https://websitecomment-k4dp9jlgs-wangq1hs-projects.vercel.app'
+    serverURL: 'https://websitecomment-sage.vercel.app'
   disqus:
     shortname: # fill with the Disqus shortname. › https://help.disqus.com/en/articles/1717111-what-s-a-shortname
   # utterances settings › https://utteranc.es/
