--- a/_data/announcement.yml
+++ b/_data/announcement.yml
@@ -1,3 +1,3 @@
 - title: "Welcome to my homepage!"
-  message: "欢迎来到我的个人主页。本网站主要用于记录我的学术研究、科研经历、生活感悟等。网站正在建设中，可能随时更新。内容尚未完善，还望海涵。登陆后评论功能已集成（不会收集任何个人信息），但可能需要魔法。"
+  message: "欢迎来到我的个人主页。本网站主要用于记录我的学术研究、科研经历、生活感悟等。网站正在建设中，可能随时更新。内容尚未完善，还望海涵。评论功能已集成，但可能需要魔法。"
   date: "2024-12-14"
