--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,25 +1,24 @@
-- url: /assets/img/gallery/1.jpg
+- url: /assets/img/gallery/1.webp
   alt: 图片1
   caption: 
-- url: /assets/img/gallery/2.jpg
+- url: /assets/img/gallery/2.webp
   alt: 图片2
   caption: 
-- url: /assets/img/gallery/3.jpg
+- url: /assets/img/gallery/3.webp
   alt: 图片3
   caption: 
-- url: /assets/img/gallery/4.jpg
+- url: /assets/img/gallery/4.webp
   alt: 图片4
   caption: 
-- url: /assets/img/gallery/5.jpg
+- url: /assets/img/gallery/5.webp
   alt: 图片5
   caption: 
-- url: /assets/img/gallery/6.jpg
+- url: /assets/img/gallery/6.webp
   alt: 图片6
   caption: 
-- url: /assets/img/gallery/7.jpg
+- url: /assets/img/gallery/7.webp
   alt: 图片7
   caption: 
-- url: /assets/img/gallery/8.jpg
+- url: /assets/img/gallery/8.webp
   alt: 图片8
   caption: 
-
