--- a/_config.yml
+++ b/_config.yml
@@ -126,28 +126,28 @@ related_websites: # the related website section in the footer
   friends_classmates:
     - name: Ruocheng Wang
       url: https://wang-ruocheng.github.io/
-      image: /assets/img/related_websites/wrc_ox.jpg
+      image: /assets/img/related_websites/wrc_ox.webp
 
     - name: Yiming Hu
       url: https://cant1de.github.io/
-      image: /assets/img/related_websites/icon-hym.jpg
+      image: /assets/img/related_websites/icon-hym.webp
 
     - name: Lihao Guo
       url: https://chiclats.github.io/
-      image: /assets/img/related_websites/glh.jpg
+      image: /assets/img/related_websites/glh.webp
   
   professors_instructors:
     - name: Prof. Hong Ding
       url: https://web.tdli.sjtu.edu.cn/dingh/members/%E4%B8%81%E6%B4%AA/
-      image: /assets/img/related_websites/dingh.jpg
+      image: /assets/img/related_websites/dingh.webp
 
     - name: Prof. Shao-feng Ge
       url: https://tdli.sjtu.edu.cn/EN/people/t-d-lee-fellows/53/Shao-FengGe
-      image: /assets/img/related_websites/gsf.jpg
+      image: /assets/img/related_websites/gsf.webp
 
     - name: Prof. Xuefeng Ding
       url: https://dingxf.cn/
-      image: /assets/img/related_websites/dingxf.jpg
+      image: /assets/img/related_websites/dingxf.webp
 
 # ------------ The following options are not recommended to be modified ------------------
 
