feat: Add new gallery image '9' and update pinning status for existing items.

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -1,7 +1,7 @@
 - url: /assets/img/gallery/1.webp
   alt: 图片1
   caption: 
-  pinned: true
+  # pinned: true
 - url: /assets/img/gallery/2.webp
   alt: 图片2
   caption: 
@@ -23,3 +23,7 @@
 - url: /assets/img/gallery/8.webp
   alt: 图片8
   caption: 
+- url: /assets/img/gallery/9.webp
+  alt: 图片9
+  caption: 
+  pinned: true
