fix: update gallery image 9 extension from webp to jpg

--- a/_data/gallery.yml
+++ b/_data/gallery.yml
@@ -23,7 +23,7 @@
 - url: /assets/img/gallery/8.webp
   alt: 图片8
   caption: 
-- url: /assets/img/gallery/9.webp
+- url: /assets/img/gallery/9.jpg
   alt: 图片9
   caption: 
   pinned: true
